<resources>
    <string name="app_name">Grassroot</string>
    <string name="gcm_sender_id">503331392861</string>
    <string name="play_services_unsupported_erorr">Your phone doesn\'t support Google play services</string>
    <string name="title_login_activity">Login</string>
    <string name="title_main_activity">Grassroot</string>
    <string name="error_unknown_generic">Sorry, an error occurred</string>
    <string name="error_server_unreachable">Sorry, the Grassroot server is unreachable at present</string>
    <string name="error_phone_number">Error with phone number, please check and try again</string>
    <string name="error_lwire_alert_not_found">Sorry, there was an error creating the alert</string>
    <string name="error_lwire_alert_media_error">Sorry, error saving file</string>
    <string name="button_next">Next</string>
    <string name="button_skip">Skip</string>
    <string name="button_finish">Finish</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_modify">Modify</string>
    <string name="button_start">Start</string>
    <string name="button_save">Save</string>
    <string name="login_welcome">Welcome to Grassroot</string>
    <string name="login_enter_msisdn">To get started, please enter your phone number</string>
    <string name="login_button_register">New user</string>
    <string name="login_enter_msisdn_label">Phone number</string>
    <string name="login_enter_msisdn_hint">South African numbers only</string>
    <string name="login_enter_otp_banner">Enter OTP</string>
    <string name="login_enter_otp_string">Now please enter the code SMSd to you</string>
    <string name="login_enter_otp_label">Enter code</string>
    <string name="login_enter_otp_hint">6-digit number</string>
    <string name="reset_password_number_title">Password forgotten</string>
    <string name="reset_password_number_subtitle">Please type in your phone number to start password reset process.</string>
    <string name="reset_password_number_label">Phone number</string>
    <string name="reset_password_number_hint">South African numbers only</string>
    <string name="reset_password_number_error">Please enter valid phone number</string>
    <string name="reset_password_password_title">New password</string>
    <string name="reset_password_password_subtitle">Please choose new password.</string>
    <string name="reset_password_password_label">New Password</string>
    <string name="reset_password_password_hint"></string>
    <string name="reset_password_password_error">Please enter at least 6 characters</string>
    <string name="reset_password_request_failed">Password change request failed, have you entered valid phone number?</string>
    <string name="reset_password_otp_title">Please enter the confirmation code</string>
    <string name="reset_password_otp_subtitle">You should have received a SMS. If not please go back and retry.</string>
    <string name="reset_password_otp_label">Confirmation code</string>
    <string name="reset_password_otp_hint">6-digit number</string>
    <string name="reset_password_otp_error">Please enter 6-digit code</string>
    <string name="reset_password_otp_verification_failed">Token verification failed, try again</string>
    <string name="password_change_success_title">Password change success!</string>
    <string name="password_change_success_subtitle">You can now proceed to login.</string>
    <string name="password_change_success_button">Login</string>
    <string name="button_login">Login</string>
    <string name="register_username_title">What\'s your name?</string>
    <string name="register_username_subtitle">What people know you by.</string>
    <string name="register_username_label">Name</string>
    <string name="register_username_hint">Sia</string>
    <string name="register_username_error">Username must have at least one letter</string>
    <string name="register_number_title">What\'s your phone number?</string>
    <string name="register_number_subtitle">This number will be user to send you SMS confirmation code.</string>
    <string name="register_number_label">Phone number</string>
    <string name="register_number_hint">South African numbers only</string>
    <string name="register_number_error">Please enter valid phone number</string>
    <string name="register_password_title">Choose password?</string>
    <string name="register_password_subtitle">You will receive a SMS confirmation code on the next step.</string>
    <string name="register_password_label">Password</string>
    <string name="register_password_hint">Minimum 6 characters</string>
    <string name="register_password_error">Please enter at least 6 characters</string>
    <string name="register_otp_title">Please enter the confirmation code</string>
    <string name="register_otp_subtitle">You should have received a SMS. If not please go back and retry.</string>
    <string name="register_otp_label">Confirmation code</string>
    <string name="register_otp_hint">6-digit number</string>
    <string name="register_otp_error">Please enter 6-digit code</string>
    <string name="register_otp_verification_failed">Token verification failed, try again</string>
    <string name="register_success_title">All good!</string>
    <string name="register_success_subtitle">Welcome, %1$s! Your account is now up and running.</string>
    <string name="main_explanation">LiveWire! To issue an alert type what\'s happening, or take
        some media below</string>
    <string name="take_video">Video</string>
    <string name="take_photo">Photo</string>
    <string name="take_audio">Audio</string>
    <string name="pick_gallery">Gallery</string>
    <string name="lwire_headline_title">Headline</string>
    <string name="lwire_media_header">Add media</string>
    <string name="lwire_media_prompt">Do you want to include a photo, video or attachment?</string>
    <string name="lwire_headline_explan">Okay, next please type in a title for the alert</string>
    <string name="lwire_description_header">Longer description</string>
    <string name="lwire_description_hint">Please enter any longer description of the alert, e.g.,
    any article text (please keep it short and simple)</string>
    <string name="lwire_confirm_header">Confirmed?</string>
    <string name="lwire_confirm_text_media">Issuing a LiveWire alert with title \'%1$s\', about group %2$s, with a media attached.</string>
    <string name="lwire_confirm_text_no_media">Issuing a LiveWire alert with title \'%1$s\', about group %2$s. No media attached.</string>
    <string name="done_header">Done!</string>
    <string name="lwire_alert_sent">The LiveWire alert has been sent. What next?</string>
    <string name="group_select_title">What group\'s this for?</string>
    <string name="error_permission_denied">Permission denied</string>
    <string name="error_file_creation">Error starting camera, check file space</string>
    <string name="me_sync_all">Refresh all</string>
    <string name="me_logout">Logout</string>
    <string name="sync_on_title">Sync</string>
    <string name="sync_on_desc">Refresh automatically</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Groups</string>
    <string name="title_around">Around me</string>
    <string name="title_me">Me</string>
    <string name="title_groups">Groups</string>
    <string name="or">Or</string>
    <string name="join_an_existing_one">JOIN AN EXISTING ONE</string>
    <string name="create_a_new_group">CREATE A NEW GROUP</string>
    <string name="no_group_info">You are not part of any group at the moment.</string>
    <string name="sync_problem">Sync failed. Please try to sync once again.</string>
    <string name="button_add_member">Add Member</string>
    <string name="button_about">ABOUT</string>
    <string name="title_all">ALL</string>
    <string name="title_votes">VOTE</string>
    <string name="title_meetings">MEET</string>
    <string name="title_todos">TO-DO</string>
    <string name="text_meeting_title"><b>%1$s</b> has called a meeting <b>\"%2$s\"</b></string>
    <string name="text_rsvp">RSVP</string>
    <string name="text_view">VIEW</string>
    <string name="text_group_header">CURRENT AND UPCOMING ACTIONS</string>
    <string name="text_todo_title"><b>%1$s</b> created to-do item <b>\"%2$s\"</b></string>
    <string name="home_text_todo_title">&lt;b>%1$s&lt;/b> created To-Do:</string>
    <string name="text_empty_group_items">Nothing happening in your Group just yet</string>
    <string name="text_vote">VOTE</string>
    <string name="text_vote_title"><b>%1$s</b> started a vote:\n\"%2$s\"</string>
    <string name="info_invite_group_members">Get this Group going,\ninvite new members!</string>
    <string name="info_group_create_item">Why not create\nyour first action? Tap here!</string>
    <string name="text_old_header">Older</string>
    <string name="token_expired">Your session expired. Please log in again.</string>
    <string name="close">Close</string>
    <string name="info_no_data_not_authorized">Grassroot uses very little data, but you need some to use the app. Please switch on data or reload your balance and try again.</string>
    <string name="continue_offline">Continue offline</string>
    <string name="retry_connection">Retry connection</string>
    <string name="snackbar_offline">You\'re still offline</string>
    <string name="contact_book">From contact book</string>
    <string name="manualy">Manual entry</string>
    <string name="bulk_upload">Bulk upload</string>
    <string name="add">Add</string>
    <string name="name">Contact name</string>
    <string name="contact_number">Contact number</string>
    <string name="title_pick_contact">Pick Contact</string>
    <string name="no_contacts">You don\'t have contacts with phone numbers</string>
    <string name="dictate_your_action">Dictate your action</string>
    <string name="call_meeting">Call a meeting</string>
    <string name="take_vote">Take a vote</string>
    <string name="create_todo">Create To-do</string>
    <string name="select_a_group">Select a group</string>
    <string name="hint_group_name">Search By Group name</string>
    <string name="what_is_it_about">What is it about?</string>
    <string name="vote_option_header">Add a vote option</string>
    <string name="name_your_group">What is the groups name?</string>
    <string name="vote_subject">Vote subject</string>
    <string name="describe_your_group">What is the group about?</string>
    <string name="enter_response_tag">Response tag</string>
    <string name="cancel">CANCEL</string>
    <string name="next">NEXT</string>
    <string name="info_meeting_subject">Type in a short sentence the subject of this meeting.</string>
    <string name="info_vote_subject">What is the subject of the vote?</string>
    <string name="info_vote_description">Provide a detailed description of what is being voted on.</string>
    <string name="info_group_nature">Enter the name of your group</string>
    <string name="info_group_description">Enter a short description of your group</string>
    <string name="info_response_tag">How would you like to prefix responses?</string>
    <string name="info_todo_description">Describe the Action for members.</string>
    <string name="when_would_it_happen">When would it happen?</string>
    <string name="hint_meeting_date_time">Add event date and time</string>
    <string name="pick_from_calendar">Or pick from the calendar</string>
    <string name="hint_meeting_date_time_example">Example: Next Monday at 5pm</string>
    <string name="title_confirm_date">Are these correct?</string>
    <string name="no_try_again">NO, TRY AGAIN</string>
    <string name="yes">YES</string>
    <string name="at">At</string>
    <string name="ignore">IGNORE</string>
    <string name="decline">DECLINE</string>
    <string name="accept">ACCEPT</string>
</resources>