<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp"
    app:layout_constraintLeft_toLeftOf="@id/title"
    app:layout_constraintTop_toBottomOf="@id/title"
    tools:showIn="@layout/item_home">

    <TextView
        android:id="@+id/option1"
        style="@style/group_option_style"
        android:text="@string/accept"
        tools:text="ACCEPT" />

    <TextView
        android:id="@+id/option2"
        style="@style/group_option_style"
        android:text="@string/decline"
        tools:text="DECLINE" />

    <TextView
        android:id="@+id/option3"
        style="@style/group_option_style"
        android:text="@string/ignore"
        tools:text="IGNORE" />

</LinearLayout>