<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="16dp"
    android:id="@+id/root"
    android:orientation="vertical">

    <Button
        android:id="@+id/newGroup"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/create_a_new_group"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="13sp"
        android:text="@string/or"
        android:textColor="@color/text_grey"
        android:textSize="15sp"
        android:textStyle="normal"
        tools:text="Or" />

    <Button
        android:id="@+id/joinGroup"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/join_an_existing_one"
        android:textColor="@color/white" />

</LinearLayout>